Chat persistence works for all visitor actions
The visitor can change pages, and come and go freely and chat should
work. The rep can't change pages yet

--- a/maqaw.css
+++ b/maqaw.css
@@ -2,7 +2,7 @@
     margin: 0;
     padding: 0;
     color: black;
-    background-color: none;
+    background-color: transparent;
     position: fixed;
     left: 20px;
     bottom: 0;
@@ -41,7 +41,7 @@
     background-color: white;
     border-right: 1px solid lightgrey;
     border-left: 1px solid lightgrey;
-    height: 211px;
+    height: 212px;
     width: 248px;
 }
 
