--- a/maqaw.css
+++ b/maqaw.css
@@ -5,7 +5,6 @@
     top: auto !important;
     right: auto !important;
 
-
     z-index: 101 !important;
 
     color: black !important;
@@ -41,71 +40,63 @@
     direction: ltr !important;
 
     clip: auto !important;
-    overflow: visible !important;
+    overflow: hidden !important;
     visibility: visible !important;
     outline: invert none medium !important;
 
     /** odditites which will need specified separately for each property that it goes against **/
     display: inline !important;
     cursor: auto !important;
-
-    /* if any of the elements are to be draggable you cannot set these
-    you should however take care and set all four even if auto in the individual positioned elements
-    top: auto !important;
-    right: auto !important;
-    bottom: auto !important;
-    left: auto !important;
-    */
 }
 
-
 #maqaw-client-header {
-    padding-top: 8px;
-    padding-left: 10px;
-    color: white;
-    font-family: helvetica;
-    font-size: 15px;
+    padding-top: 8px !important;
+    padding-left: 10px !important;
+    color: white !important;
+    font-family: "helvetica", 'arial' !important;
+    font-size: 15px !important;
 }
 
 .maqaw-default-client-header {
-    cursor: pointer;
-    width: 250px;
-    height: 35px;
-    background-color: #fc5f43;
-    border-top-left-radius: 5px;
-    border-top-right-radius: 5px;
+    cursor: pointer !important;
+    width: 250px !important;
+    height: 35px !important;
+    background-color: #fc5f43 !important;
+    border-top-left-radius: 5px !important;
+    border-top-right-radius: 5px !important;
 }
 
 .maqaw-chat-header-text {
-    padding-top: 8px;
-    padding-left: 10px;
-    color: white;
-    font-family: helvetica;
-    font-size: 15px;
+    padding-top: 8px !important;
+    padding-left: 10px !important;
+    color: white !important;
+    font-family: "helvetica" !important;
+    font-size: 15px !important;
 }
 
 #chat-header-text:hover {
-    text-decoration: underline;
+    text-decoration: underline !important;
 }
 
 .client-chat-window {
-    background-color: white;
-    border-right: 1px solid lightgrey;
-    border-left: 1px solid lightgrey;
-    height: 212px;
-    width: 248px;
+    background-color: white !important;
+    border-right: 1px solid lightgrey !important;
+    border-left: 1px solid lightgrey !important;
+    height: 212px !important;
+    width: 248px !important;
 }
 
 .chat-display {
-    border-bottom: 1px solid lightgrey;
-    padding: 10px;
-    height: 140px;
-    overflow-y: auto;
-    white-space: pre-wrap; /* CSS3 */
-    white-space: -moz-pre-wrap; /* Firefox */
-    white-space: -pre-wrap; /* Opera <7 */
-    white-space: -o-pre-wrap; /* Opera 7 */
-    word-wrap: break-word; /* IE */
+    border-bottom: 1px solid lightgrey !important;
+    padding: 10px !important;
+    height: 140px !important;
+    overflow-y: auto !important;
+    overflow-x: hidden !important;
+    white-space: pre-wrap !important; /* CSS3 */
+    white-space: -moz-pre-wrap !important; /* Firefox */
+    white-space: -pre-wrap !important; /* Opera <7 */
+    white-space: -o-pre-wrap !important; /* Opera 7 */
+    word-wrap: break-word !important; /* IE */
 
 }
 
@@ -114,181 +105,206 @@
 }
 
 .chat-entry {
-    width: 238px;
-    height: 20px;
-    margin: 2px;
-    resize: none;
+    width: 238px !important;
+    height: 20px !important;
+    margin: 2px !important;
+    resize: none !important;
 }
 
 #chat-entry:focus {
-    box-shadow: 0 0 10px lightblue;
+    box-shadow: 0 0 10px lightblue !important;
 }
 
 .chat-paragraph {
-    line-height: .94;
-    padding-top: 3px;
-    padding-bottom: 3px;
-    margin: 0;
+    line-height: .94 !important;
+    padding-top: 3px !important;
+    padding-bottom: 3px !important;
+    margin: 0 !important;
 }
 
 .chat-src-name {
-    color: red;
+    color: red !important;
+    display: inline !important;
+    margin: 0 !important;
 }
 
 .chat-dest-name {
-    color: blue;
+    color: blue !important;
 }
 
 #login-button {
-    padding-top: 2px;
-    padding-left: 3px;
-    color: blue;
-    font-size: 10px;
-    float: left;
-    cursor: pointer;
+    padding-top: 2px !important;
+    padding-left: 3px !important;
+    color: blue !important;
+    font-size: 10px !important;
+    float: left !important;
+    cursor: pointer !important;
 }
 
 #login-button:hover {
-    color: red;
+    color: red !important;
 }
 
 #maqaw-link {
-    float: right;
-    padding-top: 2px;
-    padding-right: 7px;
-    color: grey;
-    text-align: right;
-    font-size: 11px;
+    float: right !important;
+    padding-top: 2px !important;
+    padding-right: 7px !important;
+    color: grey !important;
+    text-align: right !important;
+    font-size: 11px !important;
 }
 
 #login-window {
-    background-color: white;
-    border-right: 1px solid lightgrey;
-    border-left: 1px solid lightgrey;
-    height: 210px;
-    width: 248px;
+    background-color: white !important;
+    border-right: 1px solid lightgrey !important;
+    border-left: 1px solid lightgrey !important;
+    height: 210px !important;
+    width: 248px !important;
 }
 
 #login-title {
-    font-family: helvetica;
-    font-size: 20px;
-    text-align: center;
-    font-weight: bold;
-    margin: 0 auto;
-    padding-top: 20px;
+    font-family: helvetica !important;
+    font-size: 20px !important;
+    text-align: center !important;
+    font-weight: bold !important;
+    margin: 0 auto !important;
+    padding-top: 20px !important;
 }
 
-input {
-    margin-left: 20px;
-    margin-top: 8px;
+input[type="text"]{
+    margin: 8px 0 0 20px !important;
+    padding: 3px !important;
+    border: 1px solid grey !important;
+    background-color: white !important;
+    color: black !important;
+    font-size: 13px !important;
+    width: 200px !important;
+    height: 15px !important;
 }
 
-input:focus {
-    box-shadow: 0 0 10px lightblue;
+input[type="text"]:focus {
+    box-shadow: 0 0 10px lightblue !important;
+    -moz-box-shadow: 0 0 10px lightblue !important;
+    -webkit-box-shadow: 0 0 10px lightblue !important;
+}
+
+input[type="password"]{
+    margin: 8px 0 0 20px !important;
+    padding: 3px !important;
+    border: 1px solid grey !important;
+    background-color: white !important;
+    color: black !important;
+    font-size: 13px !important;
+    width: 200px !important;
+    height: 15px !important;
+}
+input[type="password"]:focus {
+    box-shadow: 0 0 10px lightblue !important;
+    -moz-box-shadow: 0 0 10px lightblue !important;
+    -webkit-box-shadow: 0 0 10px lightblue !important;
 }
 
 .login-page-button {
-    border-radius: 5px;
-    padding: 3px;
-    border: 1px solid grey;
-    background-color: deepskyblue;
-    color: white;
-    cursor: pointer;
-    margin-top: 8px;
-    width: 50px;
-    height: 20px;
-    text-align: center;
-    margin-left: 20px;
+    font-size: 14px !important;
+    border-radius: 5px !important;
+    padding: 3px !important;
+    border: 1px solid grey !important;
+    background-color: deepskyblue !important;
+    color: white !important;
+    cursor: pointer !important;
+    margin-top: 8px !important;
+    width: 50px !important;
+    height: 20px !important;
+    text-align: center !important;
+    margin-left: 20px !important;
 }
 
 .login-page-button:hover {
-    background-color: black;
+    background-color: black !important;
 }
 
 #login-submit-button {
-    float: left;
+    float: left !important;
 }
 
 #login-back-button {
-    float: left;
+    float: left !important;
 }
 
 #login-footer {
-    margin-left: 20px;
-    margin-right: 20px;
-    padding-top: 20px;
-    clear: both;
-    font-size: 12px;
+    margin-left: 20px !important;
+    margin-right: 20px !important;
+    padding-top: 20px !important;
+    clear: both !important;
+    font-size: 12px !important;
 }
 
 #logged-in-chat-window {
-    float: left;
-    background-color: white;
-    border-right: 1px solid lightgrey;
-    border-left: 1px solid lightgrey;
-    height: 211px;
-    width: 248px;
+    float: left !important;
+    background-color: white !important;
+    border-right: 1px solid lightgrey !important;
+    border-left: 1px solid lightgrey !important;
+    height: 211px !important;
+    width: 248px !important;
 }
 
 #logged-in-dashboard {
-    border-top-right-radius: 5px;
-    float: right;
-    background-color: white;
-    border-right: 1px solid lightgrey;
-    border-top: 1px solid lightgrey;
-    height: 210px;
-    width: 248px;
+    border-top-right-radius: 5px !important;
+    float: right !important;
+    background-color: white !important;
+    border-right: 1px solid lightgrey !important;
+    border-top: 1px solid lightgrey !important;
+    height: 210px !important;
+    width: 248px !important;
 }
 
 #logged-in-chat-footer {
 
-    position: absolute;
-    padding: 5px;
-    bottom: 0;
+    position: absolute !important;
+    padding: 5px !important;
+    bottom: 0 !important;
 }
 
 #logout-button {
-    color: blue;
-    cursor: pointer;
-    font-size: 12px;
+    color: blue !important;
+    cursor: pointer !important;
+    font-size: 12px !important;
 }
 
 #logout-button:hover {
-    color: red;
+    color: red !important;
 }
-
 
 #no-chat-session-selected {
-    text-align: center;
-    margin: 0 auto;
-    font-size: 20px;
-    font-family: helvetica;
-    padding-top: 70px;
+    text-align: center !important;
+    margin: 0 auto !important;
+    font-size: 20px !important;
+    font-family: helvetica !important;
+    padding-top: 70px !important;
 }
-
 
 #dashboard-title {
 
-    text-align: center;
-    padding-top: 10px;
-    font-size: 17px;
-    font-weight: bold;
+    text-align: center !important;
+    padding-top: 10px !important;
+    font-size: 17px !important;
+    font-weight: bold !important;
 }
 
 #visitor-list-container {
-   overflow-y: auto;
-    height: 175px;
-    width: 248px;
+    overflow-y: auto !important;
+    height: 175px !important;
+    width: 248px !important;
 }
 
 #visitor-list-table {
-    cursor: pointer;
-    overflow: auto;
-    width: 100%;
+    cursor: pointer !important;
+    overflow: auto !important;
+    width: 100% !important;
 
-    -webkit-user-select: none; /* Chrome/Safari */
-    -moz-user-select: none; /* Firefox */
-    -ms-user-select: none; /* IE10+ */
+    -webkit-user-select: none !important; /* Chrome/Safari */
+    -moz-user-select: none !important; /* Firefox */
+    -ms-user-select: none !important; /* IE10+ */
 }
 
 .visitor-list-entry {
@@ -296,12 +312,12 @@ input:focus {
 }
 
 .visitor-list-entry:hover {
-    background-color: lightcoral;
+    background-color: lightcoral !important;
 }
 
 .selected-visitor {
-    background-color: lightcoral;
-    font-weight: bold;
+    background-color: lightcoral !important;
+    font-weight: bold !important;
 }
 
 .selected-visitor:hover {
@@ -309,15 +325,15 @@ input:focus {
 }
 
 #maqaw-no-rep-window {
-    text-align: center;
-    font-size: 25px;
-    font-weight: bold;
+    text-align: center !important;
+    font-size: 25px !important;
+    font-weight: bold !important;
 }
 
 #maqaw-login-error-message {
-    color:red;
-    font-style: italic;
-    text-align: center;
+    color: red !important;
+    font-style: italic !important;
+    text-align: center !important;
 }
 
 
