--- a/maqaw.css
+++ b/maqaw.css
@@ -74,7 +74,6 @@
     font-size: 15px !important;
 }
 
-
 #maqaw-chat-header-text:hover {
     text-decoration: underline !important;
 }
@@ -107,8 +106,6 @@
     position: absolute;
     bottom: 0;
 }
-
-
 
 textarea.maqaw-chat-entry {
     padding: 3px;
@@ -157,7 +154,7 @@ textarea.maqaw-chat-entry {
 }
 
 #maqaw-link {
-    float:right;
+    float: right;
     margin-left: 95px;
     padding-top: 2px !important;
     padding-right: 7px !important;
@@ -183,7 +180,7 @@ textarea.maqaw-chat-entry {
     padding-top: 20px !important;
 }
 
-input[type="text"]#maqaw-login-user-field{
+input[type="text"]#maqaw-login-user-field {
     margin: 8px 0 0 20px !important;
     padding: 3px !important;
     border: 1px solid grey !important;
@@ -331,10 +328,18 @@ input[type="password"]:focus#maqaw-login-password-field {
 .maqaw-selected-visitor {
     background-color: lightcoral !important;
     font-weight: bold !important;
-
 }
 
 .maqaw-selected-visitor:hover {
+
+}
+
+.maqaw-alert-visitor {
+    background-color: lightskyblue !important;
+    color: white !important;
+}
+
+.maqaw-alert-visitor:hover {
 
 }
 
