--- a/maqaw.css
+++ b/maqaw.css
@@ -242,6 +242,7 @@ input[type="password"]:focus#maqaw-login-password-field {
 }
 
 #maqaw-login-footer {
+
     margin-left: 20px !important;
     margin-right: 20px !important;
     padding-top: 20px !important;
@@ -270,18 +271,34 @@ input[type="password"]:focus#maqaw-login-password-field {
 
 #maqaw-logged-in-chat-footer {
     position: absolute !important;
-    padding-left: 5px !important;
-    padding-bottom: 2px !important;
     bottom: 0 !important;
+    width: 248px;
+    height: 20px;
 }
 
 #maqaw-logout-button {
+    padding-left: 5px;
+    padding-top: 2px;
+    float: left;
     color: blue !important;
     cursor: pointer !important;
     font-size: 12px !important;
 }
 
 #maqaw-logout-button:hover {
+    color: red !important;
+}
+
+#maqaw-screenshare-button {
+    padding-right: 5px;
+    padding-top: 2px;
+    float: right;
+    color: blue !important;
+    cursor: pointer !important;
+    font-size: 12px !important;
+}
+
+#maqaw-screenshare-button:hover {
     color: red !important;
 }
 
@@ -320,6 +337,10 @@ input[type="password"]:focus#maqaw-login-password-field {
 .maqaw-visitor-list-entry {
 
 }
+
+
+
+
 
 .maqaw-visitor-list-entry:hover {
     background-color: lightcoral !important;
