--- a/maqaw.css
+++ b/maqaw.css
@@ -338,6 +338,10 @@ input[type="password"]:focus#maqaw-login-password-field {
 
 }
 
+.maqaw-mirror-clicked-element {
+    background-color: rgba(255, 255, 0, .3) !important;
+}
+
 
 
 
