--- a/maqaw.css
+++ b/maqaw.css
@@ -342,6 +342,10 @@ input[type="password"]:focus#maqaw-login-password-field {
     background-color: rgba(255, 255, 0, .6) !important;
 }
 
+.maqaw-mirror-clicked-element-rep {
+    background-color: rgba(255, 0, 0, .3) !important;
+}
+
 
 
 
